# antik-examples

./: .gitignore  ArchiveFolder.cpp  ArchiveMailBox.cpp  CMakeLists.txt  DownloadAllAttachments.cpp  ExtractToFolder.cpp  FTPBackup.cpp  FTPRestore.cpp  FTPSync.cpp  FileWatcher.cpp  IMAPCommandTerminal.cpp  SCPBackup.cpp  SCPRestore.cpp  SFTPBackup.cpp  SFTPRestore.cpp  SMTPSendMail.cpp  WaitForMailBoxEvent.cpp  ZIPArchiveInfo.cpp  readme.md
